src/test/ui/parser/diff-markers/tuple-struct.rs
struct S(
<<<<<<< HEAD //~ ERROR encountered diff marker
    u8,
=======
    i8,
>>>>>>> branch
);
